{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 407,
  "lineage": "796ab3f4-8882-204f-98e1-bde908aa9a9f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "testdns",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06672d07f62285d1d",
            "arn": "arn:aws:ec2:eu-west-2:502168573434:instance/i-0f7bcd92c34a8390e",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2ssm_instanceprofile",
            "id": "i-0f7bcd92c34a8390e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-030ebabaf2b90de67",
            "private_dns": "ip-10-10-0-111.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0668c26954f0a8a0d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-084306eed0bbccf39",
            "tags": {
              "Name": "testdns"
            },
            "tags_all": {
              "Name": "testdns"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-040226248319bb7a0"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2ssm_instanceprofile",
            "aws_iam_role.role_ec2ssm",
            "aws_security_group.sg_for_ec2",
            "aws_subnet.workload_sub1",
            "aws_vpc.workload"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:502168573434:security-group/sg-0451ab7f7aaa046aa",
            "description": "Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-0451ab7f7aaa046aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "502168573434",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-00986239a248fbc88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.workload"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_for_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:502168573434:security-group/sg-040226248319bb7a0",
            "description": "empty inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-040226248319bb7a0",
            "ingress": [],
            "name": "empty",
            "name_prefix": "",
            "owner_id": "502168573434",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "empty"
            },
            "tags_all": {
              "Name": "empty"
            },
            "timeouts": null,
            "vpc_id": "vpc-00986239a248fbc88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.workload"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "workload_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:502168573434:subnet/subnet-084306eed0bbccf39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.10.0.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084306eed0bbccf39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "502168573434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub1"
            },
            "tags_all": {
              "Name": "sub1"
            },
            "vpc_id": "vpc-00986239a248fbc88"
          },
          "dependencies": [
            "aws_vpc.workload"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tooling",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:502168573434:vpc/vpc-0cd7281be45a14135",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-086397a01be5b6ce5",
            "default_route_table_id": "rtb-028c3a441cf648709",
            "default_security_group_id": "sg-092e8c5314310ae70",
            "dhcp_options_id": "dopt-014f327da7d563353",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cd7281be45a14135",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-028c3a441cf648709",
            "owner_id": "502168573434",
            "tags": {
              "Name": "tooling"
            },
            "tags_all": {
              "Name": "tooling"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "workload",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:502168573434:vpc/vpc-00986239a248fbc88",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0aad9cb5b612a85e1",
            "default_route_table_id": "rtb-02414cfd0c29cc551",
            "default_security_group_id": "sg-056b60106791f443c",
            "dhcp_options_id": "dopt-014f327da7d563353",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00986239a248fbc88",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02414cfd0c29cc551",
            "owner_id": "502168573434",
            "tags": {
              "Name": "workload"
            },
            "tags_all": {
              "Name": "workload"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "wld_ep_ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2messages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:502168573434:vpc-endpoint/vpce-0cbe16a34047e760a",
            "dns_entry": [
              {
                "dns_name": "vpce-0cbe16a34047e760a-g5q71ysm.ec2messages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0cbe16a34047e760a-g5q71ysm-eu-west-2a.ec2messages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "ec2messages.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z0413918PBAK4GP6FL9A"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0cbe16a34047e760a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-058b651073c918a89"
            ],
            "owner_id": "502168573434",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0451ab7f7aaa046aa"
            ],
            "service_name": "com.amazonaws.eu-west-2.ec2messages",
            "state": "available",
            "subnet_ids": [
              "subnet-084306eed0bbccf39"
            ],
            "tags": {
              "Name": "ec2messages-ep",
              "env": "test"
            },
            "tags_all": {
              "Name": "ec2messages-ep",
              "env": "test"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-00986239a248fbc88"
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.workload_sub1",
            "aws_vpc.workload"
          ]
        },
        {
          "index_key": "ssm",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:502168573434:vpc-endpoint/vpce-08323c4ee9d787d8c",
            "dns_entry": [
              {
                "dns_name": "vpce-08323c4ee9d787d8c-c5v8qu2k.ssm.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-08323c4ee9d787d8c-c5v8qu2k-eu-west-2a.ssm.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "ssm.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z05055681N6AJOBIRDR9K"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-08323c4ee9d787d8c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0623b93b69cdc8e01"
            ],
            "owner_id": "502168573434",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0451ab7f7aaa046aa"
            ],
            "service_name": "com.amazonaws.eu-west-2.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-084306eed0bbccf39"
            ],
            "tags": {
              "Name": "ssm-ep",
              "env": "test"
            },
            "tags_all": {
              "Name": "ssm-ep",
              "env": "test"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-00986239a248fbc88"
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.workload_sub1",
            "aws_vpc.workload"
          ]
        },
        {
          "index_key": "ssmmessages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:502168573434:vpc-endpoint/vpce-032736e3d41f17df8",
            "dns_entry": [
              {
                "dns_name": "vpce-032736e3d41f17df8-th2v2za7.ssmmessages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-032736e3d41f17df8-th2v2za7-eu-west-2a.ssmmessages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "ssmmessages.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z050613920NNPOL09MH02"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-032736e3d41f17df8",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03c79b526a792a5aa"
            ],
            "owner_id": "502168573434",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0451ab7f7aaa046aa"
            ],
            "service_name": "com.amazonaws.eu-west-2.ssmmessages",
            "state": "available",
            "subnet_ids": [
              "subnet-084306eed0bbccf39"
            ],
            "tags": {
              "Name": "ssmmessages-ep",
              "env": "test"
            },
            "tags_all": {
              "Name": "ssmmessages-ep",
              "env": "test"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-00986239a248fbc88"
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.workload_sub1",
            "aws_vpc.workload"
          ]
        }
      ]
    }
  ]
}